# bookwalker_email_parser

./: .gitignore  main.py  pyproject.toml
.github/workflows/: code_analysis.yaml
bookwalker_email_parser/: __main__.py  config.py  download.py  mail.py  order.py  output.py  payment.py
