[project]
name = "bookwalker-email-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dacite>=1.9.2",
    "imapclient>=3.0.1",
    "more-itertools>=10.8.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pylint>=4.0.4",
]

[tool.isort]
profile = "black"

[tool.pylint.message_control]
disable = [
  "missing-module-docstring", # C0114
  "missing-class-docstring", # C0115
  "missing-function-docstring", # C0116
  "too-few-public-methods", # R0903
]
